Small refactor #13